--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ publishDir = "docs"
 
 # Use an empty string if you have multiple domain linking to your website
 # This string is used to generate the absolute URL for your assets.
-baseURL = '/wedding/'
+# baseURL = '/wedding/'
 defaultContentLanguage = 'en'
 # Emoji in markdown files
 enableEmoji = true
@@ -122,11 +122,11 @@ languageCode = 'es'
 languageName = 'Español'
 weight = 4
 
-[languages.pt]
-contentDir = 'content/pt'
-languageCode = 'pt'
-languageName = 'Portugues'
-weight = 4
+# [languages.pt]
+# contentDir = 'content/pt'
+# languageCode = 'pt'
+# languageName = 'Portugues'
+# weight = 5
 
 # Uncomment the following lines to add an spanish translation.
 # [languages.fr]
