--- a/config.toml
+++ b/config.toml
@@ -122,22 +122,8 @@ languageCode = 'es'
 languageName = 'Español'
 weight = 4
 
-# [languages.pt]
-# contentDir = 'content/pt'
-# languageCode = 'pt'
-# languageName = 'Portugues'
-# weight = 5
-
-# Uncomment the following lines to add an spanish translation.
-# [languages.fr]
-# contentDir = 'content/fr'
-# languageCode = 'fr'
-# languageName = 'Français'
-# weight = 2
-
-# Uncomment the following lines to add an italian translation.
-# [languages.it]
-# contentDir = 'content/it'
-# languageCode = 'it'
-# languageName = 'Italiano'
-# weight = 3
+[languages.pt]
+contentDir = 'content/pt'
+languageCode = 'pt'
+languageName = 'Português'
+weight = 5
